--- a/_posts/2020-10-10-Spring.md
+++ b/_posts/2020-10-10-Spring.md
@@ -118,23 +118,23 @@ tags: Spring
   （5）处理指令：通过处理指令来通知其他应用程序来处理非XML格式的数据，格式为
 
 　　XML文档的根元素被称为文档元素，它和在其外部出现的处理指令、注释等作为文档实体的子节点，根元素本身和其内部的子元素也是一棵树。
-
-> <?xml version="1.0" encoding="UTF-8"?>
->   <students>
->     <student1 id="001">
->       <微信公众号>@残缺的孤独</微信公众号>
->       <学号>20140101</学号>
->       <地址>北京海淀区</地址>
->       <座右铭>要么强大，要么听话</座右铭>
->     </student1>
->     <student2 id="002">
->       <新浪微博>@残缺的孤独</新浪微博>
->       <学号>20140102</学号>
->       <地址>北京朝阳区</地址>
->       <座右铭>在哭泣中学会坚强</座右铭>
->     </student2>
->   </students>  
-
+```xml
+ <?xml version="1.0" encoding="UTF-8"?>
+   <students>
+     <student1 id="001">
+       <微信公众号>@残缺的孤独</微信公众号>
+       <学号>20140101</学号>
+       <地址>北京海淀区</地址>
+       <座右铭>要么强大，要么听话</座右铭>
+     </student1>
+     <student2 id="002">
+       <新浪微博>@残缺的孤独</新浪微博>
+       <学号>20140102</学号>
+       <地址>北京朝阳区</地址>
+       <座右铭>在哭泣中学会坚强</座右铭>
+     </student2>
+   </students>  
+```
 ### 常用解析XML方法
 
   常用解析框架： Dom4j、Sax、Pull。
@@ -397,20 +397,20 @@ dom4j解析Demo
 ​    工厂类，静态方法创建对象
 
 ​    工厂类，非静态方法创建对象
-
-> <!-- 无参构造函数 --> 
-> <bean id="user1" class="com.qian.entity.UserEntity" scope="prototype" />
-> <!-- 有参构造函数 --> 
-> <bean id="user2" class="com.qian.entity.UserEntity"> 
->    <constructor-arg name="name" type="java.lang.String" value="张三"></constructor-arg> 
->    <constructor-arg name="age" type="java.lang.Integer" value="18"></constructor-arg> 
-> </bean> 
-> <bean id="factory" class="com.qian.entity.ObjectFactory"></bean> 
-> <!-- 通过实例工厂方法创建 --> 
-> <bean id="user3" factory-bean="factory" factory-method="getInstance"></bean> 
-> <!-- 通过静态工厂方法创建 --> 
-> <bean id="user4" class="com.qian.entity.ObjectFactory" factory-method="getStaticInstance"></bean>
-
+```xml
+ <!-- 无参构造函数 --> 
+ <bean id="user1" class="com.qian.entity.UserEntity" scope="prototype" />
+ <!-- 有参构造函数 --> 
+ <bean id="user2" class="com.qian.entity.UserEntity"> 
+    <constructor-arg name="name" type="java.lang.String" value="张三"></constructor-arg> 
+    <constructor-arg name="age" type="java.lang.Integer" value="18"></constructor-arg> 
+ </bean> 
+ <bean id="factory" class="com.qian.entity.ObjectFactory"></bean> 
+ <!-- 通过实例工厂方法创建 --> 
+ <bean id="user3" factory-bean="factory" factory-method="getInstance"></bean> 
+ <!-- 通过静态工厂方法创建 --> 
+ <bean id="user4" class="com.qian.entity.ObjectFactory" factory-method="getStaticInstance"></bean>
+```
 ## IOC的依赖注入（DI）
 
 - 通过构造函数
@@ -703,11 +703,12 @@ dom4j解析Demo
 
 #### maven依赖
 
-> <dependency>
->    <groupId>org.springframework.boot</groupId>
->    <artifactId>spring-boot-starter-aop</artifactId>
-> </dependency>
-
+```html
+ <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-aop</artifactId>
+ </dependency>
+```
 #### 步骤
 
 （1）开启注解，使用 @EnableAspectJAutoProxy
@@ -1031,125 +1032,71 @@ Spring 远端调用的实现：
 
 ## 依赖
 
-> <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
->
-> xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
->
-> <modelVersion>4.0.0</modelVersion>
->
-> <groupId>com.qian</groupId>
->
-> <artifactId>qian-spring</artifactId>
->
-> <version>0.0.1-SNAPSHOT</version>
->
-> <dependencies>
->
-> <!-- 引入Spring-AOP等相关Jar -->
->
-> <dependency>
->
-> <groupId>org.springframework</groupId>
->
-> <artifactId>spring-core</artifactId>
->
-> <version>3.0.6.RELEASE</version>
->
-> </dependency>
->
-> <dependency>
->
-> <groupId>org.springframework</groupId>
->
-> <artifactId>spring-context</artifactId>
->
-> <version>3.0.6.RELEASE</version>
->
-> </dependency>
->
-> <dependency>
->
-> <groupId>org.springframework</groupId>
->
-> <artifactId>spring-aop</artifactId>
->
-> <version>3.0.6.RELEASE</version>
->
-> </dependency>
->
-> <dependency>
->
-> <groupId>org.springframework</groupId>
->
-> <artifactId>spring-orm</artifactId>
->
-> <version>3.0.6.RELEASE</version>
->
-> </dependency>
->
-> <dependency>
->
-> <groupId>org.aspectj</groupId>
->
-> <artifactId>aspectjrt</artifactId>
->
-> <version>1.6.1</version>
->
-> </dependency>
->
-> <dependency>
->
-> <groupId>aspectj</groupId>
->
-> <artifactId>aspectjweaver</artifactId>
->
-> <version>1.5.3</version>
->
-> </dependency>
->
-> <dependency>
->
-> <groupId>cglib</groupId>
->
-> <artifactId>cglib</artifactId>
->
-> <version>2.1_2</version>
->
-> </dependency>
->
-> </dependencies>
->
-> </project>
-
+```html
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+ <modelVersion>4.0.0</modelVersion>
+ <groupId>com.qian</groupId>
+ <artifactId>qian-spring</artifactId>
+ <version>0.0.1-SNAPSHOT</version>
+ <dependencies>
+ <!-- 引入Spring-AOP等相关Jar -->
+ <dependency>
+ <groupId>org.springframework</groupId>
+ <artifactId>spring-core</artifactId>
+ <version>3.0.6.RELEASE</version>
+ </dependency>
+ <dependency>
+ <groupId>org.springframework</groupId>
+ <artifactId>spring-context</artifactId>
+ <version>3.0.6.RELEASE</version>
+ </dependency>
+ <dependency>
+ <groupId>org.springframework</groupId>
+ <artifactId>spring-aop</artifactId>
+ <version>3.0.6.RELEASE</version>
+ </dependency>
+ <dependency>
+ <groupId>org.springframework</groupId>
+ <artifactId>spring-orm</artifactId>
+ <version>3.0.6.RELEASE</version>
+ </dependency>
+ <dependency>
+ <groupId>org.aspectj</groupId>
+ <artifactId>aspectjrt</artifactId>
+ <version>1.6.1</version>
+ </dependency>
+ <dependency>
+ <groupId>aspectj</groupId>
+ <artifactId>aspectjweaver</artifactId>
+ <version>1.5.3</version>
+ </dependency>
+ <dependency>
+ <groupId>cglib</groupId>
+ <artifactId>cglib</artifactId>
+ <version>2.1_2</version>
+ </dependency>
+ </dependencies>
+ </project>
+```
 ## 配置文件
 
-> <?xml version="1.0" encoding="UTF-8"?>
->
-> <beans xmlns="http://www.springframework.org/schema/beans"
->
-> xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:p="http://www.springframework.org/schema/p"
->
-> xmlns:context="http://www.springframework.org/schema/context"
->
-> xmlns:aop="http://www.springframework.org/schema/aop"
->
-> xsi:schemaLocation="
->
-> ​    http://www.springframework.org/schema/beans
->
-> ​    http://www.springframework.org/schema/beans/spring-beans.xsd
->
-> ​    http://www.springframework.org/schema/context
->
-> ​    http://www.springframework.org/schema/context/spring-context.xsd
->
-> ​    http://www.springframework.org/schema/aop
->
-> ​    http://www.springframework.org/schema/aop/spring-aop.xsd">
->
-> <bean id="userEntity" class="com.qian.entity.UserEntity" />
->
-> </beans>
+```xml
+ <?xml version="1.0" encoding="UTF-8"?>
+ <beans xmlns="http://www.springframework.org/schema/beans"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:p="http://www.springframework.org/schema/p"
+ xmlns:context="http://www.springframework.org/schema/context"
+ xmlns:aop="http://www.springframework.org/schema/aop"
+ xsi:schemaLocation="
+    http://www.springframework.org/schema/beans
+    http://www.springframework.org/schema/beans/spring-beans.xsd
+    http://www.springframework.org/schema/context
+    http://www.springframework.org/schema/context/spring-context.xsd
+    http://www.springframework.org/schema/aop
+    http://www.springframework.org/schema/aop/spring-aop.xsd">
+ <bean id="userEntity" class="com.qian.entity.UserEntity" />
+ </beans>
+```
 
 ## 启动
 ```java
