--- a/_posts/2021-06-29-360.md
+++ b/_posts/2021-06-29-360.md
@@ -5,7 +5,7 @@ tags: 笔经面经
 
 # 360
 
-​	我是2021年6月23日，投递的260提前批，服务端开发工程师-java的上海岗。
+​	我是2021年6月23日，投递的360提前批，服务端开发工程师-java的上海岗。
 
 ## 笔试
 
@@ -22,12 +22,11 @@ tags: 笔经面经
 - 编程题
 
   两道编程题40分。真的太菜了，笔试黑洞，真做不来，两道题都是27%。。。
+1. 输入是一个字符串，要求把所有的ab转换为bba，然后输出
 
-  - 1 输入是一个字符串，要求把所有的ab转换为bba，然后输出
+  题目的有一个难点是某一次转换会对后面的字符串有影响。
 
-    题目的有一个难点是某一次转换会对后面的字符串有影响。
+2. 变换回文数，只含有1，2，3，4的一个字符串，要求通过增加或者删除，让它变成回文数。每个数字的增加或者删除需要有一定的代价，代价都不同，要求变换的最低代价是什么。
 
-	- 2 变换回文数，只含有1，2，3，4的一个字符串，要求通过增加或者删除，让它变成回文数。每个数字的增加或者删除需要有一定的代价，代价都不同，要求变换的最低代价是什么。
-	
-	  看起来好想要用动态规划的样子。
+    看起来好想要用动态规划的样子。
 
